--- a/Term2/prototype_exp/nested_prototype/Makefile
+++ b/Term2/prototype_exp/nested_prototype/Makefile
@@ -1,7 +1,7 @@
 CXX=g++-10
 
 all:
-	$(CXX) -std=c++20 nested_program.cpp -fcoroutines -pthread -o prototype_sample
+	$(CXX) -std=c++20 checkpoint_program.cpp -fcoroutines -pthread -o prototype_sample
 
 clean:
-	rm -f checkpoint.data prototype_sample
+	rm -f alpha_async.data beta_async.data prototype_sample
